# cellpu

./: #Makefile#  .#Makefile  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cell.h  clean.bash  conanfile.txt  dir.c  dir.h  display.c  doxygen.cfg  dreamcell.md  dreamcell.org  err.h  grid.c  grid.lua  help.lua  main-window.glade  main.c  optical-ctl.c  optical-ctl.h  webdocs.bash
design/: heading-intput-cfgs.xoj  memory-how.xoj  message-passing.xoj  simple-sort.xoj  subcell-model.xoj
lua/: #cell.lua#  .#cell.lua  cell.lua  display.lua  display.lua~  grid.lua  instructions.lua  keyboard-cfg.lua  startup.lua  state_machine.lua  term.lua
src/: #cell.c#  app-state.hh  app.cc  app.cpp  app.hh  atlas.c  atlas.cc  atlas.cpp  atlas.h  atlas.hh  bbox.c  bbox.cc  bbox.cpp  bbox.h  bbox.hh  callbacks.c  callbacks.cc  callbacks.cpp  callbacks.h  callbacks.hh  camera.cc  camera.hh  cell.c  cell.cc  cell.cpp  cell.h  cell.hh  cmdr.cc  cmdr.hh  common.c  common.cc  common.cpp  common.h  common.hh  dir.c  dir.cc  dir.hh  display-state.c  display-state.cpp  display-state.h  (+89 more)
test/: test-optical-ctl.c  testerr.c
